# pymind

./: .gitignore  README.md  pyproject.toml
pymind/: data.py  model.py  repo.py  util.py
templates/: dataset.py
tests/: test_mind_py.py
