[tool.poetry]
name = "pymind"
version = "0.1.0"
description = ""
authors = ["Tyler Curtis Jowers <jowerstc@outlook.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
semver = "^3.0.2"
pygit2 = "^1.16.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
